// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fail to parse arrays with invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [
      1,
    ],
    "received": "string",
  },
]
`;

exports[`should fail to parse non-arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "message": "Expected an array, received a number",
    "path": [],
    "received": "number",
  },
]
`;

exports[`the path property works within an object 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [
      "a",
      0,
    ],
    "received": "string",
  },
]
`;
